--- a/_config.yml
+++ b/_config.yml
@@ -1,1 +1,7 @@
-title: Fox10301
+title: fox10301          # Название сайта (используется в <title>)
+description: Мой сайт     # Описание (можно отобразить где-то)
+baseurl: "/fox10301"     # ОБЯЗАТЕЛЬНО, если сайт не на корне, а в подпапке
+url: "https://person10301.github.io"  # Базовый URL
+
+markdown: kramdown       # Рендеринг markdown
+permalink: pretty        # Красивые URL (без .html)
